syntax = "proto3";

package chat;

option go_package = "github.com/chat-app-grpc;chat_app_grpc";

import "google/protobuf/timestamp.proto";

service ChatService{
  rpc CreateNewUser(CreateUserParams) returns (User){}
  rpc DeleteUserByUsername(DeleteUserByUsernameParams) returns (DidDeleteUserMessage){}
  rpc UpdateUser(UpdateUserParams) returns (User){}
  rpc GetAllUsers(GetAllUsersParams) returns (UsersList){}
  rpc GetUserByUsername(GetUserByUsernameParams) returns (User){}
  rpc Login(LoginParams) returns (LoginResponse){}
  rpc GetChatMessages(GetChatMessagesParams) returns (ChatMessageList){}
  rpc SendChatMessage(SendChatMessageParams) returns (ChatMessage){}

  rpc DropTable(DropTableParams) returns (DropTableMessage){}

  rpc GetServer(GetServerParams) returns (Server){}

}


message User {
  string id=1;
  string fullName=2;
  string username=3;
  string password=4;
}

message CreateUserParams {
  string fullName=1;
  string username=2;
  string password=3;
}

message DeleteUserByUsernameParams{
  string username = 1;
}

message LoginParams{
  string username =1;
  string password =2;
}

message LoginResponse{
  uint32 response_code = 1;
  optional string response = 2;
}

message UpdateUserParams {
  string username=1;
  map<string, string> updated_fields=2;
}

message GetUserByUsernameParams{
  string username=1;
}

message GetAllUsersParams{
}

message UsersList {
  repeated User users=1;
}

message DidDeleteUserMessage {
  string username = 1;
  bool success = 2;
  optional string error = 3;
}

message GetChatMessagesParams {
  string sender_id = 1;
  string recipient_id = 2;
}

message SendChatMessageParams {
 ChatMessage message = 1;
}

message ChatMessage {
  google.protobuf.Timestamp timestamp = 1;
  string sender = 2;
  string recipient = 3;
  string text = 4;
}

message ChatMessageList {
  repeated ChatMessage messages = 1;
}

message DropTableParams {
  string tableName=1;
}

message DropTableMessage{
  bool success=1;
}

message GetServerParams{
  string password = 1;
}

message Server{
  string port = 1;
}